# trading-bot

./: .env.example  .eslintrc.json  .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PROGRESS.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  package.json  tsconfig.json  vitest.config.ts
examples/: README.md  custom-sma-strategy-example.json  dca-strategy-example.json  grid-strategy-example.json  optimized-strategies.ts  run-backtest-example.ts  run-dca-backtest.ts  run-fast-optimizer.ts  run-grid-backtest.ts  run-grid-v3-backtest.ts  run-grid-v3-multi-period.ts  run-multi-period-backtest.ts  run-rsi-bb-backtest.ts  run-sma-backtest.ts  run-strategy-optimizer.ts
migrations/: 20260220134218_create_positions.sql  20260220134226_create_orders.sql  20260220134233_create_trades.sql
plans/: README.md  architecture-overview.md  implementation-guide.md  multi-strategy-trading-plan.md  strategy-improvement-plan.md  technical-specification.md
src/: config.rs  errors.rs  index.ts  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.ts
src/backtesting/: backtest-engine.ts  metrics-calculator.ts  order-simulator.ts  report-generator.ts
src/config/: app.config.ts  database.ts
src/core/: execution-engine.ts  position-manager.ts  risk-manager.ts  strategy-manager.ts
src/data/: cache.service.ts  market-data.service.ts
src/db/: mod.rs
src/models/: common.rs  exchange.rs  mod.rs  order.rs  position.rs  strategy.model.ts  trade.model.ts  trade.rs
src/strategies/: strategy-factory.ts
src/types/: backtest.types.ts  common.types.ts  index.ts  (+6 more)
(+21 files in other folders)
