[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── Async Runtime ─────────────────────────────────────────
tokio = { version = "1.49.0", features = ["full"] }

# ── Web Framework ─────────────────────────────────────────
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# ── HTTP Client (exchange REST APIs) ──────────────────────
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-tls", "json"] }

# ── WebSocket (exchange live feeds) ───────────────────────
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

# ── Database ──────────────────────────────────────────────
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }

# ── Serialization ─────────────────────────────────────────
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ── Error Handling ────────────────────────────────────────
thiserror = "2.0.18"
anyhow = "1.0.101"

# ── Utilities ─────────────────────────────────────────────
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"

# ── Logging & Tracing ─────────────────────────────────────
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
